# azalea

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.todo  azalea  init_structure.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
assets/: azalea.excalidraw
src/azalea/: cli.py  commands.py  config.py  log.py  minecraft.py  modrinth.py  util.py
temp/: azalea.json
temp/mods/: sodium.json
tests/: test_commands.py  test_init.py  test_minecraft.py  test_util.py
tests/_tmp_remove/: sodium.json
