[project]
name = "azalea"
version = "0.1.0"
description = "A Python Minecraft Modpack manager"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
azalea = "azalea.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
indent-width = 4

target-version = "py310"

lint.fixable = ["ALL"]
lint.unfixable = []
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"

docstring-code-format = true

docstring-code-line-length = "dynamic"

[[tool.mypy.overrides]]
module = "genesis.*"
ignore_missing_imports = true
